tdf#166882 - sd odf clipboard: fix missing copy/pasted graphic bullets

Export/import to/from odf clipboard the bitmap of the graphic bullets
numbering rules.

This is a follow up commit of: 66ed51712bb323bba7d1a0b0d21b256e5f5f9ccf
(Bug 128046 - List hierachy not maintained on copy'n'paste)

With this extra patch we can also copy/paste the graphic bullets
numbering rules together with their texts. However, this goes against
the MS Office and OnlyOffice behaviour, where copying text/paragraphs
only copies the text, not the list rules. So if we would just want to follow
that way, it would be enough to remove UNO_NAME_NUMBERING_RULES, EE_PARA_NUMBULLET
from SvxXMLTextImportComponentPropertyMap and SvxXMLTextExportComponentPropertyMap

See more info in:
https://bugs.documentfoundation.org/show_bug.cgi?id=166882#c5

Change-Id: I3c0b7389adf0d8efee95cc94f02905c3600342c8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188532
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit 006c8f2d7517965657a9caca1fa7afd757f2f4c5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188646
Tested-by: Michael Stahl <michael.stahl@collabora.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>